--- a/package.json
+++ b/package.json
@@ -13,36 +13,37 @@
   "author": "Max Stoiber",
   "license": "MIT",
   "scripts": {
-    "analyze:clean": "rimraf stats.json",
-    "preanalyze": "npm run analyze:clean",
     "analyze": "node ./internals/scripts/analyze.js",
-    "extract-intl": "babel-node --presets latest,stage-0 -- ./internals/scripts/extract-intl.js",
-    "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
-    "preinstall": "npm run npmcheckversion",
-    "postinstall": "npm run build:dll",
-    "prebuild": "npm run build:clean",
+    "analyze:clean": "rimraf stats.json",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress",
     "build:clean": "npm run test:clean && rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
-    "start": "cross-env NODE_ENV=development node server",
-    "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
-    "start:production": "npm run test && npm run build && npm run start:prod",
-    "start:prod": "cross-env NODE_ENV=production node server",
-    "presetup": "npm i chalk shelljs",
-    "setup": "node ./internals/scripts/setup.js",
-    "postsetup": "npm run build:dll",
     "clean": "shjs ./internals/scripts/clean.js",
     "clean:all": "npm run analyze:clean && npm run test:clean && npm run build:clean",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
+    "extract-intl": "babel-node --presets latest,stage-0 -- ./internals/scripts/extract-intl.js",
     "generate": "plop --plopfile internals/generators/index.js",
+    "heroku-postbuild": "npm run build",
     "lint": "npm run lint:js",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
     "lint:js": "npm run lint:eslint -- . ",
     "lint:staged": "lint-staged",
+    "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
+    "postinstall": "npm run build:dll",
+    "postsetup": "npm run build:dll",
+    "preanalyze": "npm run analyze:clean",
+    "prebuild": "npm run build:clean",
+    "preinstall": "npm run npmcheckversion",
+    "presetup": "npm i chalk shelljs",
     "pretest": "npm run test:clean && npm run lint",
-    "test:clean": "rimraf ./coverage",
+    "setup": "node ./internals/scripts/setup.js",
+    "start": "cross-env NODE_ENV=development node server",
+    "start:prod": "cross-env NODE_ENV=production node server",
+    "start:production": "npm run test && npm run build && npm run start:prod",
+    "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "test": "cross-env NODE_ENV=test jest --coverage",
+    "test:clean": "rimraf ./coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
-    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "lint-staged": {
     "*.js": "lint:eslint"
